--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,12 @@
 
 
 body {
-    max-width: 1400px;
+    max-width: 1440px;
     font-family: 'Raleway', sans-serif;
-    margin: 0px;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 0 auto;
+
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 ul {
@@ -193,6 +194,7 @@ header input:active {
 
 .filtres li:hover {
     background-color: #c6d9f5;
+    cursor: pointer;
 }
 
 .filtres li:active {
@@ -298,13 +300,6 @@ main ul li {
     text-decoration: none;
 }
 
-
-
-hebergement ul li:hover {
-    background-color: none;
-}
-
-
 .note-hebergement .fa-star {
     color: blue;
 }
@@ -409,12 +404,17 @@ article {
 }
 
 /*-----------------------------------------------Activité <aside> -----------------------*/
+aside {
+    width: 100%;
+}
+
 aside .activités {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
     margin-left: -35px;
+    padding: 20px;
 
 }
 
@@ -424,15 +424,15 @@ aside a {
 }
 
 .carte-activité {
-    width: 260px;
+    width: 270px;
     height: 430px;
     border: 1px white solid;
     border-radius: 20px 20px 20px 20px;
-
+    margin: 0;
 }
 
 .img-activité {
-    width: 260px;
+    width: 270px;
     height: 390px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
@@ -481,6 +481,125 @@ footer li:hover {
 
 
 /*------------------------------------- responsive------------------------*/
+@media screen and (max-width:992px) {
+
+
+    .hebergement {
+        background-color: rgb(230, 230, 230);
+        width: 100%;
+    }
+
+    .hebergement h2 {
+        font-size: 17px;
+        padding-top: 3px;
+    }
+
+
+    .hebergement ul {
+        justify-content: space-around;
+        margin-left: -5px;
+    }
+
+    .carte-hebergement {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        margin-bottom: 10px;
+        border: 2px white solid;
+        border-radius: 30px;
+        width: 250px;
+        height: 210px;
+
+        margin-right: 3px;
+    }
+
+    .img-hebergement {
+        object-fit: cover;
+        border: 2px white solid;
+        border-radius: 30px 30px 0 0;
+        height: 110px;
+        width: 250px;
+        align-items: center;
+    }
+
+
+    /*--------------------------------------- Début main <article>---------------------*/
+    article {
+        background-color: rgb(230, 230, 230);
+        display: flex;
+        margin-top: 25px;
+        width: 100%;
+        height: 300px;
+        border: 1px solid #f2f2f2;
+        border-radius: 30px;
+    }
+
+    .plus-populaires h2 {
+        font-size: 17px;
+    }
+
+    .plus-populaires ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .carte-populaire {
+        display: flex;
+        flex-direction: row;
+        margin: auto;
+        margin-bottom: 40px;
+        border: 1px white solid;
+        border-radius: 30px;
+        width: 260px;
+        height: 130px;
+        margin-right: 20px;
+    }
+
+    .img-populaires {
+        width: 100px;
+    }
+
+    .texte-populaire h3 {
+        font-size: 15px;
+    }
+
+    .texte-populaire p {
+        font-size: 13px;
+    }
+
+
+    /*-----------------------------------------------Activité <aside> -----------------------*/
+    aside .activités {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    aside h2 {
+        margin-top: 25px;
+    }
+
+    aside a {
+        color: #000;
+        text-decoration: none;
+    }
+
+    .carte-activité {
+        width: 190px;
+        height: 300px;
+        margin-bottom: 50px;
+        margin-left: 25px;
+    }
+
+    .img-activité {
+        width: 190px;
+        height: 300px;
+
+    }
+
+}
+
 
 @media screen and (max-width:768px) {
 
@@ -557,7 +676,7 @@ footer li:hover {
         border-radius: 30px;
         width: 200px;
         height: 210px;
-        background-color: white;
+
         margin-right: 3px;
     }
 
@@ -613,7 +732,7 @@ footer li:hover {
         border-radius: 30px;
         width: 210px;
         height: 130px;
-        background-color: white;
+
         margin-right: 10px;
     }
 
@@ -664,10 +783,6 @@ footer li:hover {
         object-fit: cover;
     }
 
-    .carte-activité:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        transition: 0.3s;
-    }
 
 
 }
