--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ main ul li {
     margin-bottom: 10px;
     border: 2px white solid;
     border-radius: 30px;
-    width: 250px;
+    width: 18.4vw;
     height: 230px;
     background-color: white;
 }
@@ -266,7 +266,7 @@ main ul li {
     border: 2px white solid;
     border-radius: 30px 30px 0 0;
     height: 120px;
-    width: 245px;
+    width: 18vw;
     align-items: center;
 }
 
@@ -424,7 +424,7 @@ aside a {
 }
 
 .carte-activité {
-    width: 270px;
+    width: 20vw;
     height: 430px;
     border: 1px white solid;
     border-radius: 20px 20px 20px 20px;
@@ -432,7 +432,7 @@ aside a {
 }
 
 .img-activité {
-    width: 270px;
+    width: 20vw;
     height: 390px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
@@ -481,7 +481,7 @@ footer li:hover {
 
 
 /*------------------------------------- responsive------------------------*/
-@media screen and (max-width:992px) {
+@media screen and (min-width: 769px) and (max-width:992px) {
 
 
     .hebergement {
