--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,10 @@
     --white: #FFF;
 }
 
-
-
 body {
     max-width: 1440px;
     font-family: 'Raleway', sans-serif;
     margin: 0 auto;
-
     padding: 0 20px;
     box-sizing: border-box;
 }
@@ -63,6 +60,7 @@ nav ul li {
 nav ul a:hover {
     color: #0065FC;
 }
+
 
 nav a:hover::before {
     content: "";
@@ -223,7 +221,7 @@ main ul li {
 
 
 .hebergement {
-    background-color: rgb(57, 114, 199);
+    background-color: rgb(230, 230, 230);
     display: flex;
     flex-wrap: wrap;
     border: 1px solid #f2f2f2;
@@ -328,7 +326,7 @@ main ul li {
 
 /*--------------------------------------- Début main <article>---------------------*/
 article {
-    background-color: rgb(131, 43, 43);
+    background-color: rgb(230, 230, 230);
     display: flex;
     flex-direction: column;
     width: 30%;
@@ -377,6 +375,11 @@ article {
     margin-right: 30px;
 }
 
+.texte-populaire h3 {
+    width: 15.5vw;
+}
+
+
 .note-populaire {
     display: flex;
     align-items: flex-start;
@@ -384,6 +387,7 @@ article {
     margin-bottom: 12px;
     margin-left: 0;
 }
+
 
 .note-populaire .fa-star.blue {
     color: blue;
@@ -481,8 +485,11 @@ footer li:hover {
 
 
 /*------------------------------------- responsive------------------------*/
-@media screen and (min-width: 769px) and (max-width:992px) {
 
+@media screen and (max-width: 991px)
+
+/*and (max-width:992px)*/
+    {
 
     .hebergement {
         background-color: rgb(230, 230, 230);
@@ -505,8 +512,6 @@ footer li:hover {
         flex-direction: column;
         margin: auto;
         margin-bottom: 10px;
-        border: 2px white solid;
-        border-radius: 30px;
         width: 250px;
         height: 210px;
 
@@ -515,8 +520,6 @@ footer li:hover {
 
     .img-hebergement {
         object-fit: cover;
-        border: 2px white solid;
-        border-radius: 30px 30px 0 0;
         height: 110px;
         width: 250px;
         align-items: center;
@@ -525,13 +528,11 @@ footer li:hover {
 
     /*--------------------------------------- Début main <article>---------------------*/
     article {
-        background-color: rgb(230, 230, 230);
         display: flex;
         margin-top: 25px;
         width: 100%;
         height: 300px;
-        border: 1px solid #f2f2f2;
-        border-radius: 30px;
+
     }
 
     .plus-populaires h2 {
@@ -550,8 +551,6 @@ footer li:hover {
         flex-direction: row;
         margin: auto;
         margin-bottom: 40px;
-        border: 1px white solid;
-        border-radius: 30px;
         width: 260px;
         height: 130px;
         margin-right: 20px;
@@ -601,7 +600,7 @@ footer li:hover {
 }
 
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:768px) and (max-width:930px) {
 
     header h1 {
         font-size: 20px
@@ -726,13 +725,8 @@ footer li:hover {
     .carte-populaire {
         display: flex;
         flex-direction: row;
-        margin: auto;
-        margin-bottom: 40px;
-        border: 1px white solid;
-        border-radius: 30px;
         width: 210px;
         height: 130px;
-
         margin-right: 10px;
     }
 
@@ -784,128 +778,77 @@ footer li:hover {
     }
 
 
+    /*----------------------Début nav-----------------*/
+    @media screen and (min-width:309px) {
+        nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
 
-}
+        nav img {
+            width: 100%;
+            max-width: 200px;
+        }
 
+        nav ul {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            list-style-type: none;
+        }
 
+        nav li {
+            margin: 0 10px;
+        }
 
+        /* Header présenté en colonne */
+        header {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+            margin-bottom: 30px;
+        }
 
+        header h1 {
+            text-align: center;
+            margin: 0;
+        }
 
+        header p {
+            text-align: center;
+            margin: 10px 0;
+        }
 
+        header form {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
 
+        header form input[type="search"] {
+            width: 100%;
+            max-width: 300px;
+            margin-right: 10px;
+        }
 
+        header form button {
+            border: none;
+            background-color: #1E90FF;
+            color: white;
+            padding: 10px;
+            cursor: pointer;
+        }
 
-
-
-
-
-
-
-
-
-
-/*@media screen and (max-width: 992px) {
-
-    header .filtres button {
-        margin-left: -50px;
-        font-weight: 700;
-        font-size: 13px;
-        line-height: 20px;
+        header form button.mobile-button {
+            display: none;
+        }
     }
 
-    section {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-
-    section article {
-        width: 95%;
-    }
-
-    section article img {
-        width: 170px;
-        height: 100px;
-    }
-
-    section article .first-choice .option {
-        width: 25%;
-    }
-
-    section article .second-choice .option {
-        width: 25%;
-    }
-
-    /*---------------------------------------------fin article------------------------------------*/
-
-/*section aside {
-    margin: 10px 0px 0px 0px;
-    width: 100%;
-    height: 50%;
-    margin-top: 20px;
-}
-
-aside .populaires .choix .droite h3 {
-    font-size: small;
-}
-
-aside .populaires .choix .droite p {
-    margin-top: 0%;
-    font-size: x-small
-}
-
-section aside .populaires {
-    display: flex;
-    height: 100%;
-}
-
-section aside .populaires .choix {
-    width: 30%;
-    height: 30%;
-    display: flex;
-    margin-right: 10px;
 
 }
-
-section aside .populaires .choix img {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-}
-
-section aside .populaires .choix .gauche {
-    width: 50%;
-
-}
-
-section aside .populaires .choix .droite {
-    width: 50%;
-}
-
-/*-----------------------------------------------------------*/
-
-/*main .activités .card {
-    width: 52px;
-    height: 167px;
-    border-radius: 20px;
-    margin-left: -20px;
-}
-
-main img {
-    width: 160px;
-    height: 190px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-main h4 {
-    width: 150px;
-    word-break: break-word;
-}
-
-
-
-}
-
-*/
