--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ nav ul {
 
 nav ul li {
     padding-left: 20px;
+    padding-right: 20px;
     position: relative;
 }
 
@@ -66,10 +67,10 @@ nav a:hover::before {
     content: "";
     display: block;
     position: absolute;
-    top: -40px;
+    top: -42.5px;
     left: 0;
     width: 100%;
-    height: 1px;
+    height: 2px;
     background-color: #0065FC;
 }
 
@@ -164,11 +165,12 @@ header input:active {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    margin: 0;
     padding-top: 20px;
 }
 
 .filtres h2 {
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 .filtres ul {
@@ -204,6 +206,7 @@ header input:active {
     border: 1px solid rgb(196, 195, 195);
     padding: 5px 10px;
     border-radius: 15px 15px;
+    margin-right: 5px;
 }
 
 /*-------------------------------------fin SECTION "filtres"-----------------------------------------*/
@@ -217,8 +220,6 @@ main {
 main ul li {
     border: none;
 }
-
-
 
 .hebergement {
     background-color: rgb(230, 230, 230);
@@ -254,7 +255,7 @@ main ul li {
     margin-bottom: 10px;
     border: 2px white solid;
     border-radius: 30px;
-    width: 18.4vw;
+    /*width: 18.4vw;*/
     height: 230px;
     background-color: white;
 }
@@ -285,9 +286,6 @@ main ul li {
     display: flex;
     flex-wrap: wrap;
 }
-
-
-
 
 .description-carte {
     color: black;
@@ -333,7 +331,6 @@ article {
     height: 680px;
     border: 1px solid #f2f2f2;
     border-radius: 30px;
-
 }
 
 .fa-chart-line {
@@ -341,10 +338,12 @@ article {
 }
 
 .plus-populaires h2 {
+    padding-top: 5px;
     display: flex;
     justify-content: space-between;
-    margin: 30px;
+    margin: 12px;
 }
+
 
 .img-populaires {
     display: flex;
@@ -352,16 +351,16 @@ article {
     border: white 1px solid;
     border-radius: 30px 0 0 30px;
     padding: 2px;
-    width: 33%;
+    width: 40%;
     min-width: 30%;
     height: auto;
 }
 
 .plus-populaires a {
+    box-sizing: border-box;
     text-decoration: none;
     color: #000;
 }
-
 
 .carte-populaire {
     display: flex;
@@ -369,23 +368,27 @@ article {
     margin-bottom: 40px;
     border: 1px white solid;
     border-radius: 30px;
-    width: 90%;
-    height: 150px;
+    width: 94%;
+    height: 167px;
     background-color: white;
     margin-right: 30px;
 }
 
-.texte-populaire h3 {
-    width: 15.5vw;
+.texte-populaire {
+    margin-left: 5px;
 }
 
+.texte-populaire p {
+    padding-bottom: 10px;
+
+}
 
 .note-populaire {
     display: flex;
     align-items: flex-start;
     margin: auto;
-    margin-bottom: 12px;
-    margin-left: 0;
+    margin-top: 10px;
+    /*margin-bottom: 12px;*/
 }
 
 
@@ -397,8 +400,6 @@ article {
     color: rgb(224, 224, 224);
 }
 
-
-
 .carte-populaire:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
@@ -408,18 +409,12 @@ article {
 }
 
 /*-----------------------------------------------Activité <aside> -----------------------*/
-aside {
-    width: 100%;
-}
 
 aside .activités {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    margin-left: -35px;
-    padding: 20px;
-
 }
 
 aside a {
@@ -428,16 +423,16 @@ aside a {
 }
 
 .carte-activité {
-    width: 20vw;
     height: 430px;
     border: 1px white solid;
     border-radius: 20px 20px 20px 20px;
     margin: 0;
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.2);
 }
 
 .img-activité {
-    width: 20vw;
-    height: 390px;
+    width: 22vw;
+    height: 400px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
@@ -479,22 +474,36 @@ footer li {
     padding-bottom: 10px;
 }
 
-footer li:hover {
-    font-weight: bold;
-}
-
 
 /*------------------------------------- responsive------------------------*/
 
 @media screen and (max-width: 991px) {
 
+    .filtres {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 0;
+        padding-top: 10px;
+    }
+
+    .filtres li {
+        font-size: x-small;
+    }
+
+    .filtres h2 {
+        margin-right: 0;
+    }
+
+
     .hebergement {
         background-color: rgb(230, 230, 230);
         width: 100%;
+        height: auto;
     }
 
     .hebergement h2 {
-        font-size: 17px;
+        font-size: 100%;
         padding-top: 3px;
     }
 
@@ -511,7 +520,6 @@ footer li:hover {
         margin-bottom: 10px;
         width: 250px;
         height: 210px;
-
         margin-right: 3px;
     }
 
@@ -533,7 +541,7 @@ footer li:hover {
     }
 
     .plus-populaires h2 {
-        font-size: 17px;
+        font-size: 100%;
     }
 
     .plus-populaires ul {
@@ -548,8 +556,8 @@ footer li:hover {
         flex-direction: row;
         margin: auto;
         margin-bottom: 40px;
-        width: 260px;
-        height: 130px;
+        width: auto;
+        height: 140px;
         margin-right: 20px;
     }
 
@@ -567,6 +575,10 @@ footer li:hover {
 
 
     /*-----------------------------------------------Activité <aside> -----------------------*/
+    aside {
+        width: 100%;
+    }
+
     aside .activités {
         display: flex;
         justify-content: space-around;
@@ -597,254 +609,30 @@ footer li:hover {
 }
 
 
-@media screen and (min-width:768px) and (max-width:930px) {
-
-    header h1 {
-        font-size: 20px
+/*@media screen and (max-width: 767px) {
+    body {
+        margin: 0 auto;
+        padding: 0 20px;
+        box-sizing: border-box;
     }
 
-    /*--------------------------------- fin Header---------------------------------*/
-    .filtres {
-        display: flex;
-        flex-wrap: wrap;
+    nav {
+        flex-direction: column;
         align-items: center;
-        padding-top: 20px;
-    }
-
-    .filtres h2 {
-        font-size: 15px;
-
-    }
-
-    .filtres ul {
-        list-style-type: none;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .filtres li {
-        margin-right: 30px;
-        border: 1px solid rgb(196, 195, 195);
-        border-radius: 20px 20px;
-        padding: 5px 5px;
-        font-weight: bold;
-        font-size: 12px;
-    }
-
-    p .info {
-        font-size: smaller;
-    }
-
-    .fa-info {
-        color: #0065FC;
-        border: 1px solid rgb(196, 195, 195);
-        padding: 5px 10px;
-        border-radius: 15px 15px;
-    }
-
-    /*-------------------------------------- fin filtres---------------------*/
-    main {
-        flex-direction: column;
-    }
-
-    .hebergement {
-        background-color: rgb(230, 230, 230);
-        width: 100%;
-    }
-
-    .hebergement h2 {
-        font-size: 17px;
-        padding-top: 3px;
-    }
-
-
-    .hebergement ul {
-        justify-content: space-around;
-        margin-left: -5px;
-    }
-
-    .carte-hebergement {
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        margin-bottom: 10px;
-        border: 2px white solid;
-        border-radius: 30px;
-        width: 200px;
-        height: 210px;
-
-        margin-right: 3px;
-    }
-
-    .img-hebergement {
-        object-fit: cover;
-        border: 2px white solid;
-        border-radius: 30px 30px 0 0;
-        height: 110px;
-        width: 195px;
-        align-items: center;
-    }
-
-    .description-carte h3 {
-        font-size: 15px;
-    }
-
-    .description-carte p {
-        font-size: 12px;
-    }
-
-    .note-hebergement {
-        font-size: smaller;
-    }
-
-    /*------------------------------------ Début main <article>---------------------*/
-    article {
-        background-color: rgb(230, 230, 230);
-        display: flex;
-        margin-top: 25px;
-        width: 100%;
-        height: 300px;
-        border: 1px solid #f2f2f2;
-        border-radius: 30px;
-    }
-
-    .plus-populaires h2 {
-        font-size: 17px;
-    }
-
-    .plus-populaires ul {
-        display: flex;
-        flex-direction: row;
-        margin-left: -5px;
-    }
-
-    .carte-populaire {
-        display: flex;
-        flex-direction: row;
-        width: 210px;
-        height: 130px;
-        margin-right: 10px;
-    }
-
-    .img-populaires {
-        width: 90px;
-    }
-
-    .texte-populaire h3 {
-        font-size: 12px;
-        font-weight: bolder;
-    }
-
-    .texte-populaire p {
-        font-size: 12px;
-    }
-
-    .note-populaire {
-        padding-top: 20px;
-    }
-
-    /*-----------------------------------------------Activité <aside> -----------------------*/
-    aside .activités {
-        display: flex;
-    }
-
-    aside h2 {
-        margin-top: 25px;
-    }
-
-    aside a {
-        color: #000;
-        text-decoration: none;
-    }
-
-    .carte-activité {
-        width: 140px;
-        height: 250px;
-        border: 1px white solid;
-        border-radius: 20px 20px 20px 20px;
-        margin: 0;
-        margin-left: 25px;
-    }
-
-    .img-activité {
-        width: 140px;
-        height: 200px;
-        border-radius: 20px 20px 0 0;
-        object-fit: cover;
-    }
-
-
-    /*----------------------Début nav-----------------*/
-    /*@media screen and (min-width:309px) {
-        nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-
-        nav img {
-            width: 100%;
-            max-width: 200px;
-        }
-
-        nav ul {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            list-style-type: none;
-        }
-
-        nav li {
-            margin: 0 10px;
-        }
-
-        /* Header présenté en colonne 
-    header {
-        display: flex;
-        flex-direction: column;
         justify-content: center;
-        align-items: center;
-        margin-top: 50px;
-        margin-bottom: 30px;
-    }
-
-    header h1 {
-        text-align: center;
-        margin: 0;
-    }
-
-    header p {
-        text-align: center;
-        margin: 10px 0;
-    }
-
-    header form {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 20px;
-    }
-
-    header form input[type="search"] {
-        width: 100%;
-        max-width: 300px;
-        margin-right: 10px;
-    }
-
-    header form button {
-        border: none;
-        background-color: #1E90FF;
-        color: white;
         padding: 10px;
-        cursor: pointer;
     }
 
-    header form button.mobile-button {
-        display: none;
+    nav img {
+        margin-left: 70px;
     }
-}
 
+    nav a:hover::before {
+        content: inherit;
+        border-bottom: #0065FC 2px solid;
+    }
 
+    header .post{
+    
+    }
 }
