--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,18 @@ nav ul a:hover {
     color: #0065FC;
 }
 
+nav a {
+    padding: 39px 26px;
+}
 
-nav a:hover::before {
+nav a:hover,
+nav a:focus {
+    border-top: 2px solid #0065fc;
+    color: #0065fc;
+}
+
+
+/*nav a:hover::before {
     content: "";
     display: block;
     position: absolute;
@@ -72,7 +82,7 @@ nav a:hover::before {
     width: 100%;
     height: 2px;
     background-color: #0065FC;
-}
+}*/
 
 nav a {
     text-decoration: none;
@@ -255,8 +265,8 @@ main ul li {
     margin-bottom: 10px;
     border: 2px white solid;
     border-radius: 30px;
-    /*width: 18.4vw;*/
-    height: 230px;
+    width: 18.4vw;
+    height: auto;
     background-color: white;
 }
 
@@ -265,7 +275,7 @@ main ul li {
     border: 2px white solid;
     border-radius: 30px 30px 0 0;
     height: 120px;
-    width: 18vw;
+    /* width: 18vw;*/
     align-items: center;
 }
 
@@ -518,17 +528,17 @@ footer li {
         flex-direction: column;
         margin: auto;
         margin-bottom: 10px;
-        width: 250px;
-        height: 210px;
+        width: 25vw;
+        height: 230px;
         margin-right: 3px;
     }
 
-    .img-hebergement {
+    /*.img-hebergement {
         object-fit: cover;
         height: 110px;
         width: 250px;
         align-items: center;
-    }
+    }*/
 
 
     /*--------------------------------------- Début main <article>---------------------*/
@@ -556,7 +566,7 @@ footer li {
         flex-direction: row;
         margin: auto;
         margin-bottom: 40px;
-        width: auto;
+        width: 25vw;
         height: 140px;
         margin-right: 20px;
     }
@@ -578,7 +588,6 @@ footer li {
     aside {
         width: 100%;
     }
-
 
     aside .activités {
         display: flex;
@@ -605,7 +614,7 @@ footer li {
 }
 
 
-/*@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     body {
         margin: 0 auto;
         padding: 0 20px;
@@ -616,19 +625,29 @@ footer li {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 10px;
+        padding: auto;
     }
 
     nav img {
-        margin-left: 70px;
+        margin-left: 10%;
     }
 
-    nav a:hover::before {
-        content: inherit;
-        border-bottom: #0065FC 2px solid;
+    nav a {
+        padding: 0;
     }
 
-    header .post{
-    
+    nav a:hover,
+    nav a:focus {
+        border-top: none;
+        border-bottom: 2px solid #0065FC;
     }
+
+    header .post {
+        font-size: auto;
+    }
+
+    /*----------------------<header>-----------*/
+
+
+
 }
